--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build": "next build --output public",
     "dev": "next dev -p 8080 --turbo",
     "lint": "eslint .",
     "start": "next start -p 8080 --turbo",
